[gd_scene load_steps=13 format=3 uid="uid://dvh2vqgob2niq"]

[ext_resource type="PackedScene" uid="uid://dw7r4hu0l2ybu" path="res://models/apartment/Apartment.glb" id="1_oc4nn"]
[ext_resource type="Script" path="res://scripts/apartment_hall_scene.gd" id="1_q5i1i"]
[ext_resource type="PackedScene" uid="uid://vtsrnm2snj21" path="res://models/hallway/apt_hallway.glb" id="2_niqg6"]
[ext_resource type="PackedScene" uid="uid://c77yvk1jsoi7h" path="res://prefabs/dynamic_door.tscn" id="3_gml1m"]
[ext_resource type="PackedScene" uid="uid://bvwd6fp6eftlj" path="res://models/apt_door/apt_door_red.glb" id="4_l73ky"]
[ext_resource type="Script" path="res://scripts/use_get_sticker.gd" id="5_di0uu"]
[ext_resource type="Material" uid="uid://5lriymwl1hwe" path="res://materials/an_sticker.tres" id="6_nih5q"]
[ext_resource type="PackedScene" uid="uid://dqqa714610ej0" path="res://prefabs/fpui.tscn" id="8_btxj1"]

[sub_resource type="BoxMesh" id="BoxMesh_diobt"]

[sub_resource type="BoxShape3D" id="BoxShape3D_h2ram"]
size = Vector3(2.5, 1, 1.5)

[sub_resource type="QuadMesh" id="QuadMesh_snnsk"]
material = ExtResource("6_nih5q")
size = Vector2(0.75, 0.375)

[sub_resource type="BoxShape3D" id="BoxShape3D_kedbr"]
size = Vector3(0.25, 3, 3)

[node name="ApartmentHallScene" type="Node3D"]
script = ExtResource("1_q5i1i")

[node name="Geometry" type="Node" parent="."]

[node name="apartment" parent="Geometry" instance=ExtResource("1_oc4nn")]

[node name="hallway" parent="Geometry" instance=ExtResource("2_niqg6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21, -0.25, 5)

[node name="Doors" type="Node" parent="."]

[node name="EnforcerDoor" parent="Doors" instance=ExtResource("3_gml1m")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6.25, 0, 6.625)

[node name="ApartmentDoor" parent="Doors" instance=ExtResource("3_gml1m")]
unique_name_in_owner = true
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 0.75, 0, 3.375)

[node name="exitDoor" parent="Doors" instance=ExtResource("4_l73ky")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 22.75, 0, 5.75)

[node name="use_get_sticker" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.256272, 1.24503, -2.27222)
collision_layer = 8
script = ExtResource("5_di0uu")

[node name="_use_zone_mesh" type="MeshInstance3D" parent="use_get_sticker"]
transform = Transform3D(2.5, 0, 0, 0, 1, 0, 0, 0, 1.5, 0, 0, 0)
visible = false
mesh = SubResource("BoxMesh_diobt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="use_get_sticker"]
shape = SubResource("BoxShape3D_h2ram")

[node name="sticker_get_visual" type="MeshInstance3D" parent="use_get_sticker"]
mesh = SubResource("QuadMesh_snnsk")

[node name="sticker_get_visual_rear" type="MeshInstance3D" parent="use_get_sticker/sticker_get_visual"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
mesh = SubResource("QuadMesh_snnsk")
skeleton = NodePath("../..")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="use_get_sticker"]

[node name="SpawnPoints" type="Node" parent="."]

[node name="BedroomSpawnPoint" type="Node3D" parent="SpawnPoints"]
unique_name_in_owner = true
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 0, 0, 0)

[node name="HallwaySpawnPoint" type="Node3D" parent="SpawnPoints"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21, 0, 5)

[node name="EnforcerSpawn" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 8)

[node name="AreaTriggers" type="Node" parent="."]

[node name="ExitTrigger" type="Area3D" parent="AreaTriggers"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22.25, 1.5, 5)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaTriggers/ExitTrigger"]
shape = SubResource("BoxShape3D_kedbr")

[node name="HallTrigger3" type="Area3D" parent="AreaTriggers"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.25, 1.5, 5)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaTriggers/HallTrigger3"]
shape = SubResource("BoxShape3D_kedbr")

[node name="HallTrigger2" type="Area3D" parent="AreaTriggers"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.25, 1.5, 5)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaTriggers/HallTrigger2"]
shape = SubResource("BoxShape3D_kedbr")

[node name="HallTrigger1" type="Area3D" parent="AreaTriggers"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.25, 1.5, 5)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaTriggers/HallTrigger1"]
shape = SubResource("BoxShape3D_kedbr")

[node name="AptDoorTrigger" type="Area3D" parent="AreaTriggers"]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1.5, 3.125)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaTriggers/AptDoorTrigger"]
shape = SubResource("BoxShape3D_kedbr")

[node name="FPUI" parent="." instance=ExtResource("8_btxj1")]

[editable path="Geometry/apartment"]
[editable path="Geometry/hallway"]
